--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
 			<br>
 		</div>
 		<div class="error-footer">
-			<div class="error-qrcode"><img src="./assets/QR-Code.png" height="150" /></div>
+			<div class="error-qrcode"><img src="/assets/QR-Code.png" height="150" /></div>
 			<div class="error-contact">
 				有关此问题的详细信息和可能的解决方法:
 				<br>
